--- a/package.json
+++ b/package.json
@@ -3,14 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.14.1",
+    "geolib": "^2.0.24",
+    "google-maps-react": "^2.0.2",
+    "leaflet": "^1.4.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
-    "react-scripts": "2.1.5"
+    "react-leaflet": "^2.2.1",
+    "react-scripts": "2.1.5",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4",
+    "styled-components": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
